--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel = "icon" href ="{{url_for('static',filename='logo.png')}}" type = "image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="{{url_for('static',filename='style.css')}}">
     <title>LinkSync - YouTube Video Downloader</title>
@@ -13,7 +14,7 @@
     <div class="container">
         <div class="cover" id="content">
             <h1>LinkSync - YouTube Video Downloader</h1>
-            <form  class="flex-form">
+            <form  class="flex-form" autocomplete="off">
                 <label for="from">
                     <i class="ion-location"></i>
                 </label>
