--- a/templates/downloadpage.html
+++ b/templates/downloadpage.html
@@ -20,7 +20,7 @@
                 <button class="btn" id="downloadbutton"><i class="fa fa-download"></i>Download</button>
             </form>
             <div class="classic-3" id="loading">Downloading ...</div>
-            <div class="completed" id="completed">Download Completed!!</div>
+            <div class="completed" id="completed">Download Started!</div>
         </div>
     </div>
 
