--- a/templates/downloadpage.html
+++ b/templates/downloadpage.html
@@ -19,7 +19,7 @@
                 <br><p id="code" hidden>{{code}}</p>
                 <button class="btn" id="downloadbutton"><i class="fa fa-download"></i>Download</button>
             </form>
-            <div class="classic-3" id="loading">Downloading ...</div>
+            <div class="classic-3" id="loading">Getting Link Ready<br><p style="font-size: 22px;">This might take a while...</div>
             <div class="completed" id="completed">Download Started!!</div>
         </div>
     </div>
